Add basic non webview chat